# reMarkable

./: .gitignore  .gitmodules  README.md  convert.py
driver/: driver.py
driver/reference/: reference.content  reference.metadata
reference/: reference.page
ui/: CMakeLists.txt  main.cpp
